2007-03-01 Fred Kiefer <FredKiefer@gmx.de>

	* Source/cairo/CairoGState.m (-setColor:state:): Use fillColor
	instead of parameter. Only in the former is the alpha field
	set. Bug found by using valgrind.
	
2007-02-28 Fred Kiefer <FredKiefer@gmx.de>
	
	* Source/cairo/CairoContext.m (-initWithContextInfo:): Set self
	from super call to get PS contexts working.

2007-02-28  Nicola Pero  <nicola.pero@meta-innovation.com>

	* configure.ac: Use gnustep-config to set GNUSTEP_MAKEFILES
	if not set.
	* GNUmakefile: Same change.
	* configure: Regenerated.

2007-02-28  Nicola Pero  <nicola.pero@meta-innovation.com>

	* Tools/win32pbs.m (WINVER): Define to make it compile with new
	releases where HWND_MESSAGE is not defined unless you explicitly
	request recent Microsoft Windows APIs by setting WINVER.

2007-02-27 Fred Kiefer <FredKiefer@gmx.de>
	
	* Source/winlib/Win32FontInfo.m (-setupAttributes:):
	Correct setting of maximumAdvancement and add xHeight.
	* Source/art/ftfont.m (-initWithFontName:matrix:screenFont:):
	Correct setting of maximumAdvancement and xHeight.
	* Source/xlib/GSXftFontInfo.m (-setupAttributes:):
	Correct setting of maximumAdvancement.
	* Source/xlib/XGFont.m(-setupAttributes:): Correct setting of
	maximumAdvancement. 
	* Headers/cairo/CairoFontInfo.h: Add new ivar lineHeight.
	* Source/cairo/CairoFontInfo.m (-setupAttributes:):
	Correct setting of descender and add lineHeight and xHeight.
	* Source/cairo/CairoFontInfo.m (-drawGlyphs:length:on:): Remove adjustment.
	* Source/cairo/CairoGState.m: Better protection against _ct being null.
	
2007-02-27  Nicola Pero  <nicola.pero@meta-innovation.com>

	* Source/GNUmakefile.postamble (config.h): Use MKDIRS, not
	GNUSTEP_MAKEFILES/mkinstalldirs, to create local directories.

2007-02-27  Nicola Pero  <nicola.pero@meta-innovation.com>

	* Source/x11/GNUmakefile.preamble (GNUSTEP_INSTALL_LIBDIR): Do
	not set this obsolete/unused variable.
	* Source/xdps/GNUmakefile.preamble: Same change.